# dcs_nav_plugin

./: .gitignore  CMakeLists.txt  README_HyperplanePlanner.md  global_planner_plugin.xml  package.xml  readme.md
include/dcs_nav_plugin/: debug_utils.hpp  hybrid_a_star.hpp  hyperplane_planner.hpp  sub_sht_mpc_controller.hpp
include/dcs_nav_plugin/geometry/: geometry_engine.hpp
include/dcs_nav_plugin/mpc/: mpc_solver_casadi.hpp
params/: nav2_params_template.yaml
src/: debug_utils.cpp  demo_geometry_standalone.cpp  hybrid_a_star.cpp  hyperplane_based methods.py  hyperplane_planner.cpp  sub_sht_mpc_controller.cpp
src/geometry/: geometry_engine.cpp
src/mpc/: mpc_solver_casadi.cpp
test/: test_geometry_engine.cpp  test_mpc_solver.cpp
